--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             My name is <a href="https://www.linkedin.com/in/lescarbonaro/">Les Carbonaro</a>.
           </p>
           <p class="fragment">
-            I am a software developer and my work consists of full-stack web application development
+            I am a software developer, mainly full-stack web application development.
           </p>
           <p class="fragment">
-            I also run a beginner-friendly web dev meet-up group called <a href="https://www.meetup.com/mississauga-coding/">Mississauga Coding</a>.
+            I also host a beginner-friendly web dev meet-up group called <a href="https://www.meetup.com/mississauga-coding/">Mississauga Coding</a>.
           </p>
   
           <aside class="notes">
