add land acknowledgement

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="reveal">
     <div class="slides">
       <section>
-        <a href="https://revealjs.com">
+        <a>
           <img src="java-logo.png" alt="java logo" style="
                 height: 180px;
                 margin: 0 auto 4rem auto;
@@ -37,7 +37,24 @@
           Online High School Coding Challenge 2023
         </p>
 
-        <aside class="notes">Notes slide 1</aside>
+        <aside class="notes">
+          <p>Good evening and welcome to this Java tutorial in preparation for the Coding Challenge organised by PEO Mississauga</p>
+        </aside>
+      </section>
+
+      <section>
+        <h2>Land Acknowledgement</h2>
+
+        <aside class="notes">
+          <p>I want to acknowledge that we all live and work 
+            with gratitude here
+            on the traditonal territory of 
+            the Huron-Wendat,
+            the Haudenosaunee,
+            and the Mississaugas of the Credit First Nation.       
+          </p>
+          
+        </aside>
       </section>
 
       <section class="left">
