--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         </p>
 
         <aside class="notes">
-          <p>Good evening and welcome to this Java tutorial in preparation for the Coding Challenge organised by PEO Mississauga</p>
+          <p>Good evening and welcome to 
+            this Java tutorial in preparation 
+            for the Coding Challenge 
+            organised by Professional Engineers Ontario
+            Mississauga Chapter</p>
         </aside>
       </section>
 
