--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
             <p>
               I want to acknowledge that we all live and work with gratitude
-              here on the traditonal territory of the Huron-Wendat, the
+              here on the traditional territory of the Huron-Wendat, the
               Haudenosaunee, and the Mississaugas of the Credit First Nation.
             </p>
           </aside>
