--- a/index.html
+++ b/index.html
@@ -459,12 +459,18 @@
         </pre>
 
           <aside class="notes">
-            <p class="fragment">
-              programs need input
-              one common way via user prompts
+            <p>
+              Programs need input.
+              One common way is to prompt user and wait for the input &amp; ENTER.
               Java has built-in classes
               one of which is the Scanner class
             </p>
+            <p>
+              Java has built-in classes.
+              One of which is the Scanner class
+              which we can use for input.
+            </p>
+            <p>Type in an example</p>
           </aside>
         </section>
 
