--- a/index.html
+++ b/index.html
@@ -436,6 +436,30 @@
           </aside>
         </section>
 
+        <section class="left">
+          <h2>Inputs</h2>
+          <p class="fragment">Programs typically need input(s).</p>
+          <p class="fragment">One way is to prompt user to enter a value.</p>
+          <p class="fragment">Java has built-in methods for this purpose.</p>
+          
+          <aside class="notes">
+            <p>
+              We spoke about output.
+              Programs need input.
+              One common way is to prompt user and wait for the input &amp; ENTER.
+              Java has built-in classes
+              one of which is the Scanner class
+            </p>
+            <p>
+              Java has built-in classes.
+              One of which is the Scanner class
+              which we can use for input.
+            </p>
+            <p>Go through example code on slide</p>
+            
+          </aside>
+        </section>
+
         <section  data-auto-animate>
           <h2>Inputs</h2>
            <pre data-id="code-animation">
@@ -459,18 +483,8 @@
         </pre>
 
           <aside class="notes">
-            <p>
-              Programs need input.
-              One common way is to prompt user and wait for the input &amp; ENTER.
-              Java has built-in classes
-              one of which is the Scanner class
-            </p>
-            <p>
-              Java has built-in classes.
-              One of which is the Scanner class
-              which we can use for input.
-            </p>
-            <p>Type in an example</p>
+            <p>Walk through code</p>            
+            <p>Then type in an example</p>
           </aside>
         </section>
 
