--- a/index.html
+++ b/index.html
@@ -236,6 +236,15 @@
           </div>
         </section>
 
+        <!-- what was Java originally called? 
+             Oak, for the giant tree that grew outside 
+             James Gosling's office window -->
+
+        <!-- what year was java launched?
+          Java 1.0 came out in 1996.
+          The current version is Java 21.
+         -->
+
         <section>
           <h2 data-id="code-title">Basic File Structure</h2>
         </section>
