--- a/index.html
+++ b/index.html
@@ -556,10 +556,34 @@
         </section>
 
         <section class="left">
-          <h2>Arithmetic Operators</h2>
-          <p class="fragment"></p>
+          <h2>Operators</h2>
+          <table>
+            <tr class="fragment">
+              <td>Arithmetic</td>
+              <td> + - * / </td>
+            </tr>
 
-          <aside class="notes">slide notes</aside>
+            <tr class="fragment">
+              <td>Assignment</td>
+              <td> = += td>
+            </tr>
+
+             <tr class="fragment">
+              <td>Comparison</td>
+              <td> == td>
+            </tr>
+
+            <tr class="fragment">
+              <td>Logical</td>
+              <td> && || td>
+            </tr>
+            
+          </table>
+
+          <aside class="notes">
+            <p>go through types in order</p>
+            <p>give examples of most commonly used in each type</p>
+          </aside>
         </section>
 
         <section class="left">
