--- a/index.html
+++ b/index.html
@@ -557,25 +557,25 @@
 
         <section class="left">
           <h2>Operators</h2>
-          <table>
+          <table style="border:none;">
             <tr class="fragment">
               <td>Arithmetic</td>
-              <td> + - * / </td>
+              <td> + - * / ++ -- </td>
             </tr>
 
             <tr class="fragment">
               <td>Assignment</td>
-              <td> = += td>
+              <td> = += -= </td>
             </tr>
 
              <tr class="fragment">
               <td>Comparison</td>
-              <td> == td>
+              <td> == >= <= != </td>
             </tr>
 
             <tr class="fragment">
               <td>Logical</td>
-              <td> && || td>
+              <td> && || </td>
             </tr>
             
           </table>
@@ -586,19 +586,7 @@
           </aside>
         </section>
 
-        <section class="left">
-          <h2>Assignment Operators</h2>
-          <p class="fragment"></p>
-
-          <aside class="notes">slide notes</aside>
-        </section>
-
-        <section class="left">
-          <h2>Comparison Operators</h2>
-          <p class="fragment"></p>
-
-          <aside class="notes">slide notes</aside>
-        </section>
+        
 
         <section class="left">
           <h2>Conditional Statements</h2>
