--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
           </aside>
         </section>
 
-        <section class="left">
+        <section >
           <h2>Operators</h2>
           <table style="border:none;">
             <tr class="fragment">
