--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
         </section>
 
         <section class="left">
-          <h2>Functions & Methods</h2>
+          <h2>Functions &amp; Methods</h2>
           <p class="fragment"></p>
 
           <aside class="notes">slide notes</aside>
