--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         color: white;
         transform: rotateY(180deg);
       }
+
+      table, tr, td, th{
+        border: none;
+      }
     </style>
   </head>
 
@@ -557,7 +561,7 @@
 
         <section >
           <h2>Operators</h2>
-          <table style="border:none;">
+          <table >
             <tr class="fragment">
               <td>Arithmetic</td>
               <td> + - * / % ++ -- </td>
@@ -581,8 +585,8 @@
           </table>
 
           <aside class="notes">
-            <p>go through types in order</p>
-            <p>give examples of most commonly used in each type</p>
+            <p>Go through types in order.</p>
+            <p>Give examples of most commonly used in each type.</p>
           </aside>
         </section>
 
