--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
           </div>
         </section>
 
-        <!-- what was Java originally called? 
-             Oak, for the giant tree that grew outside 
-             James Gosling's office window -->
+        <!-- What was Java originally called? 
+             Java was originally called Oak, for the oak tree 
+             outside James Gosling's office window -->
 
-        <!-- what year was java launched?
+        <!-- What year was Java launched?
           Java 1.0 came out in 1996.
           The current version is Java 21.
          -->
