--- a/index.html
+++ b/index.html
@@ -559,30 +559,30 @@
           </aside>
         </section>
 
-        <section >
+        <section class="left">
           <h2>Operators</h2>
-          <table >
-            <tr class="fragment">
-              <td>Arithmetic</td>
-              <td> + - * / % ++ -- </td>
-            </tr>
+          <ul>
+            <li >
+              <p class="fragment" data-fragment-index="1" >Arithmetic</p>
+              <p class="fragment" data-fragment-index="5" > + - * / % ++ -- </p>
+            </li>
 
-            <tr class="fragment">
-              <td>Assignment</td>
-              <td> = += -= </td>
-            </tr>
+            <li>
+              <p class="fragment" data-fragment-index="2" >Assignment</p>
+              <p class="fragment" data-fragment-index="6" > = += -= </p>
+            </li>
 
-             <tr class="fragment">
-              <td>Comparison</td>
-              <td> == &lt;= &gt;= != </td>
-            </tr>
+             <li>
+              <p class="fragment" data-fragment-index="3" >Comparison</p>
+              <p class="fragment" data-fragment-index="7" > == &lt;= &gt;= != </p>
+            </li>
 
-            <tr class="fragment">
-              <td>Logical</td>
-              <td> && || </td>
-            </tr>
+            <li>
+              <p class="fragment" data-fragment-index="4" >Logical</p>
+              <p class="fragment" data-fragment-index="8" > && || </p>
+            </li>
             
-          </table>
+          </ul>
 
           <aside class="notes">
             <p>Go through types in order.</p>
