--- a/index.html
+++ b/index.html
@@ -307,13 +307,9 @@
 
                   } // end of method block 
 
-
-                  // other methods if any go here
-
+                  // other methods, if any, go here
 
                 }  // end of class block
-
-
               </code>
             </pre>
 
