--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
             <ul>
               <li>
                 <a href="https://www.onlinegdb.com/online_java_compiler"
-                  >OnlineGDB</a
-                >
+                  >OnlineGDB</a>
               </li>
               <li>
                 <a href="https://www.codiva.io">Codiva</a>
@@ -151,7 +150,7 @@
           <h2>Why Learn/Use Java?</h2>
           <ul>
             <li class="fragment">
-              Versatile &amp; portable across both platforms &amp; applications
+              Versatile &amp; portable across platforms &amp; applications
             </li>
             <li class="fragment">Used across several industries</li>
             <li class="fragment">In high demand</li>
