--- a/index.html
+++ b/index.html
@@ -532,11 +532,27 @@
             &amp;&amp; ||
           </p>
 
-          <p class="fragment" data-fragment-index="5">Some examples...</p>
-
           <aside class="notes">
             <p>Go through types in order.</p>
-            <p>Give examples of most commonly used in each type.</p>
+            <p>Will see some examples of these last two shortly.</p>
+          </aside>
+        </section>
+        
+        <section class="left">
+          <h2>Conditional Statements</h2>
+          <p class="fragment">
+            If something is true then do this, otherwise do that
+          </p>
+          <p class="fragment slide-code">if ... then ... else ...</p>
+          <p class="fragment">Lat's have a look.</p>
+
+          <aside class="notes">
+            <p>
+              These last two types of operators
+              comparison and logical operators 
+              come in especially handy in
+              conditonal statements.
+            </p>
           </aside>
         </section>
 
@@ -553,22 +569,6 @@
               It was later dicovered that a company called Oak Technologies
               already had rights to that name, and so James and his team at Sun
               had to come up with another name.
-            </p>
-          </aside>
-        </section>
-
-        <section class="left">
-          <h2>Conditional Statements</h2>
-          <p class="fragment">
-            If something is true then do this, otherwise do that
-          </p>
-          <p class="fragment slide-code">if ... then ... else ...</p>
-          <p class="fragment">Some examples...</p>
-
-          <aside class="notes">
-            <p>
-              These comparison and logical operators come in especially handy in
-              conditonal statements.
             </p>
           </aside>
         </section>
