--- a/index.html
+++ b/index.html
@@ -586,8 +586,8 @@
           <p class="fragment">
             If something is true then do this, otherwise do that
           </p>
-          <p class="fragment slide-code">if ... then ... else ...</p>
-          <p class="fragment">Some examples...</p>
+          <p class="fragment slide-code">if() { ... } else { ... }</p>
+          <p class="fragment">Let's see some examples.</p>
 
           <aside class="notes">
             <p>
