--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
           </p>
 
           <p class="fragment" data-fragment-index="5">
-            Let's see some examples.
+            Let's see some examples of these.
           </p>
 
           <aside class="notes">
@@ -560,7 +560,7 @@
               }             
             </code>
           </pre>
-          <p class="fragment">Let's see an example in action.</p>
+          <p class="fragment">Let's see some examples of this in action.</p>
 
           <aside class="notes">
             <p>
@@ -569,6 +569,14 @@
               come in especially handy in
               conditonal statements.
             </p>
+            <p>Ex1 basic IF: input age; if age &lt; 13 "not a teen"</p>
+
+            <p>Ex2 add ELSE: else "you are a teen"</p>
+
+            <p>Ex3 add logical op: but what if input was 30? <br>
+              so better: if age &gt;= 13 &amp;&amp; age &lt;= 19 <br> 
+              then "teen" <br>
+              else "not a teen" </p>
           </aside>
         </section>
 
@@ -588,22 +596,7 @@
             </p>
           </aside>
         </section>
-
-        <section class="left">
-          <h2>Conditional Statements</h2>
-          <p class="fragment">
-            If something is true then do this, otherwise do that
-          </p>
-          <p class="fragment slide-code">if() { ... } else { ... }</p>
-          <p class="fragment">Let's see some examples.</p>
-
-          <aside class="notes">
-            <p>
-              These comparison and logical operators come in especially handy in
-              conditonal statements.
-            </p>
-          </aside>
-        </section>
+      
 
         <section class="left">
           <h2>Loop Statements</h2>
