--- a/index.html
+++ b/index.html
@@ -565,18 +565,22 @@
           <aside class="notes">
             <p>
               These last two types of operators
-              comparison and logical operators 
-              come in especially handy in
-              conditonal statements.
+              (comparison and logical operators)
+              come in especially handy for use in
+              conditional statements.
             </p>
             <p>Ex1 basic IF: input age; if age &lt; 13 "not a teen"</p>
 
             <p>Ex2 add ELSE: else "you are a teen"</p>
 
-            <p>Ex3 add logical op: but what if input was 30? <br>
-              so better: if age &gt;= 13 &amp;&amp; age &lt;= 19 <br> 
+            <p>Ex3 add AND logical op: but what if input was 30? <br>
+              so better: if ( age &gt;= 13 &amp;&amp; age &lt;= 19) <br> 
               then "teen" <br>
               else "not a teen" </p>
+
+            <p>Ex4 OR logical op: if( age &lt; 16 || age &gt; 90) <br>
+                then "should not be driving" <br>
+                else "drive on"</p>
           </aside>
         </section>
 
