--- a/index.html
+++ b/index.html
@@ -374,6 +374,8 @@
             <li>String</li>
           </ul>
 
+           <p class="fragment">primitive types vs object types</p>
+
           <aside class="notes">
             <p>a variable is a value stored in memory and given a label</p>
             <p>so far we printed literal strings and numbers</p>
