--- a/index.html
+++ b/index.html
@@ -675,14 +675,19 @@
           <h2>Object-Oriented Programming</h2>
           <p class="fragment"></p>
 
-          <aside class="notes">slide notes</aside>
+          <aside class="notes">
+            <p>creating our own custom classes & objects</p>
+          </aside>
         </section>
 
         <section class="left">
           <h2>Where To Find more</h2>
           <p class="fragment">links to docs, other tutorials</p>
 
-          <aside class="notes">slide notes</aside>
+          <aside class="notes">
+            <p>as you may imagine, we have barely scratched the surface</p>
+            
+          </aside>
         </section>
 
         <section class="left">
