--- a/index.html
+++ b/index.html
@@ -521,6 +521,25 @@
           </aside>
         </section>
 
+         <section class="left">
+          <h2>Useful String &amp; Math methods</h2>
+
+           <p>.length()</p>
+           <p>.equals()</p>
+           <p>.charAt()</p>
+           <p>.substring()</p>
+
+           <p>Math.pow()</p>
+           <p>Math.random()</p>
+
+           <aside class="notes">
+            <p>
+              Some useful string and math methods
+            </p>
+          </aside>
+           
+         </section>
+
         
         <section class="left">
           <h2>Operators</h2>
