--- a/index.html
+++ b/index.html
@@ -676,7 +676,11 @@
 
         <section class="left">
           <h2>Functions &amp; Methods</h2>
-          <p class="fragment"></p>
+          <p class="fragment">            
+            &lt;return-data-type&gt; myFunctionName( &lt;parameter-list&gt;  ) { <br>  
+                 // method-logic-goes-here
+            }
+          </p>
 
           <aside class="notes">slide notes</aside>
         </section>
