--- a/index.html
+++ b/index.html
@@ -540,7 +540,17 @@
           <p class="fragment slide-code">.substring()</p>
 
           <aside class="notes">
-            <p>Some useful String methods</p>
+            <p>Some useful String methods; examples</p>
+
+            <p>System.out.println ("What is your name?");</p>
+            <p>String name = input.nextLine ();            </p>
+            <p>System.out.println ("What is your number?"); </p>
+            <p>String phone = input.nextLine ();</p>
+            <p>System.out.println ("Hi " + name + ". Your name is "+ name.length() +" letters long." );    </p>
+            <p>System.out.println ("Checking is your name Fred? "+ name.equals("Fred") );</p>
+            <p>System.out.println("Your initial is: " + name.charAt(0));</p>
+            <p>System.out.println ("Your area code is " + phone.substring(0,3) );</p>
+
           </aside>
         </section>
 
