--- a/index.html
+++ b/index.html
@@ -765,12 +765,24 @@
         </section>
 
         <section class="left">
-          <h2>Loop Statements</h2>
+          <h2>For-Loop Statements</h2>
           <p class="fragment">for</p>
-          <p class="fragment">while</p>
+          <p class="fragment">for-each</p>
 
           <aside class="notes">
             <p>slide notes</p>
+          </aside>
+        </section>
+
+         <section class="left">
+          <h2>While-Loop Statements</h2>
+          <p class="fragment">while</p>
+          <p class="fragment">do-while</p>
+
+          <aside class="notes">
+            <p>while checks condition first, so code inside block might not be executed at all</p>            
+            <p>do-while checks condition last, so code inside block will be executed at least once</p>
+            <p>beware the infamous infinite loop</p>
           </aside>
         </section>
 
@@ -779,7 +791,7 @@
           <p class="fragment">switch-case</p>
 
           <aside class="notes">
-            <p>slide notes</p>
+            <p>more readable than a lengthy if-statement</p>
           </aside>
         </section>
 
