--- a/index.html
+++ b/index.html
@@ -857,16 +857,31 @@
         </section>
 
         <section class="left">
-          <h2>Where To Find More</h2>          
-          <p class="fragment">links to docs, other tutorials</p>
-          <p class="fragment">link to these slides</p>
+          <h2>Where To Find More</h2>                   
+
+          <ul class="fragment">
+            <li>
+              <a href="https://dev.java/learn/language-basics/">Dev Java</a>
+            </li>             
+
+             <li>
+              <a href="https://www.simplilearn.com/tutorials/java-tutorial">Simplilearn</a>
+            </li>
+
+            <li>
+              <a href="https://www.w3schools.com/java/">W3 Schools</a>
+            </li>
+
+            <li>
+              <a href="https://java-tutorial-peo-mc.vercel.app/">This presentation</a>
+            </li>
+          </ul>
 
           <p class="fragment">Any Questions?</p>
 
           <aside class="notes">
             <p>as you may imagine, we have barely scratched the surface</p>
-            <p>some links for youto delve deeper
-            experiment<br>
+            <p>some links for you to delve deeper and experiment<br>
             and ask questions</p>
             
           </aside>
