--- a/index.html
+++ b/index.html
@@ -490,6 +490,21 @@
           </aside>
         </section>
 
+
+        <section class="left">
+          <h2>Inputs cont.</h2>
+          <p class="fragment">InputStream</p>
+          <p class="fragment">BufferedReader</p>          
+          <p class="fragment">gives string, so need to convert</p>
+
+          <aside class="notes">
+            <p></p>
+            <p>this is an older way <br>
+              clearly more convoluted <br>
+              but apparently more performant</p>
+          </aside>
+        </section>
+
         <section data-auto-animate>
           <h2>Inputs</h2>
           <pre data-id="code-animation">
