--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
         </section>
 
         <section class="left">
-          <h2>Switch Statement</h2>
+          <h2>Switch-Case Statement</h2>
           <p class="fragment">switch-case</p>
 
           <aside class="notes">
