--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               Will be using 
               <a target="_blank" href="https://www.onlinegdb.com/online_java_compiler"
                 >OnlineGDB</a
-              >
+              > for all the <a href="https://onlinegdb.com/y2rEsAjD9" target="_blank" >examples</a> in this tutorial.
             </p>
 
             <aside class="notes">
