--- a/index.html
+++ b/index.html
@@ -240,7 +240,9 @@
               files
             </p>
             <p>which are then compiled into byte-code by the Java compiler</p>
+            <br>
             <p>rule#1: everything needs to be in a class</p>
+            <p>- filename to match class name with a .java extension</p>
           </aside>
         </section>
 
@@ -394,34 +396,7 @@
               meaning we must declare ahead of time what type of value we intend
               to store in that variable
             </p>
-            <p>just mention primitive types vs object types</p>
-          </aside>
-        </section>
-
-        <section class="left">
-          <h2>Some Variable Types</h2>
-          <p>(The most commonly used)</p>
-
-          <ul>
-            <li>int</li>
-            <li>float</li>
-            <li>double</li>
-            <li>boolean</li>
-            <li>char</li>
-            <li>String</li>
-          </ul>
-
-          <aside class="notes">
-            <a target="_blank" href="https://onlinegdb.com/rJK6j0M4t">Example</a>
-            <p>
-              int qty = 5;<br />
-              float price = 5.99f;<br />
-              double usdExchangeRate = 0.731794d;<br />
-              boolean isMember = true;<br />
-              char myInitial = 'L';<br />
-              String greeting = "Hello";
-            </p>
-
+             <a target="_blank" href="https://onlinegdb.com/rJK6j0M4t">Example</a>
             <p>Note:you do not have to assign a value right away</p>
 
             <p>Beware: Case-sensitive 
@@ -432,6 +407,8 @@
             <p>Naming convention is camelCase</p>
           </aside>
         </section>
+
+        
         
         <section  data-visibility="hidden" id="casting" class="left">
           <h2>Variable Type Conversion</h2>
